learning_components/build/log/idf_py_stdout_output_1863456
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/cold/esp/learning_components/build/bootloader/esp-idf/esptool_py && /home/cold/.espressif/python_env/idf5.0_py3.11_env/bin/python /home/cold/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/cold/esp/learning_components/build/bootloader/bootloader.bin
Bootloader binary size 0x6700 bytes. 0x900 bytes (8%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/learning_components.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/learning_components.c.obj 
/home/cold/.espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DUNITY_INCLUDE_CONFIG_H -I/home/cold/esp/learning_components/build/config -I/home/cold/esp/learning_components/main -I/home/cold/esp/esp-idf/components/newlib/platform_include -I/home/cold/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/cold/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/cold/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/cold/esp/esp-idf/components/freertos/esp_additions/include -I/home/cold/esp/esp-idf/components/esp_hw_support/include -I/home/cold/esp/esp-idf/components/esp_hw_support/include/soc -I/home/cold/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/cold/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/cold/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/cold/esp/esp-idf/components/heap/include -I/home/cold/esp/esp-idf/components/log/include -I/home/cold/esp/esp-idf/components/soc/include -I/home/cold/esp/esp-idf/components/soc/esp32/. -I/home/cold/esp/esp-idf/components/soc/esp32/include -I/home/cold/esp/esp-idf/components/hal/esp32/include -I/home/cold/esp/esp-idf/components/hal/include -I/home/cold/esp/esp-idf/components/hal/platform_port/include -I/home/cold/esp/esp-idf/components/esp_rom/include -I/home/cold/esp/esp-idf/components/esp_rom/include/esp32 -I/home/cold/esp/esp-idf/components/esp_rom/esp32 -I/home/cold/esp/esp-idf/components/esp_common/include -I/home/cold/esp/esp-idf/components/esp_system/include -I/home/cold/esp/esp-idf/components/esp_system/port/soc -I/home/cold/esp/esp-idf/components/esp_system/port/include/private -I/home/cold/esp/esp-idf/components/xtensa/include -I/home/cold/esp/esp-idf/components/xtensa/esp32/include -I/home/cold/esp/esp-idf/components/lwip/include -I/home/cold/esp/esp-idf/components/lwip/include/apps -I/home/cold/esp/esp-idf/components/lwip/include/apps/sntp -I/home/cold/esp/esp-idf/components/lwip/lwip/src/include -I/home/cold/esp/esp-idf/components/lwip/port/esp32/include -I/home/cold/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/cold/esp/esp-idf/components/esp_ringbuf/include -I/home/cold/esp/esp-idf/components/efuse/include -I/home/cold/esp/esp-idf/components/efuse/esp32/include -I/home/cold/esp/esp-idf/components/driver/include -I/home/cold/esp/esp-idf/components/driver/deprecated -I/home/cold/esp/esp-idf/components/driver/esp32/include -I/home/cold/esp/esp-idf/components/esp_pm/include -I/home/cold/esp/esp-idf/components/mbedtls/port/include -I/home/cold/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/cold/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/cold/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/cold/esp/esp-idf/components/esp_app_format/include -I/home/cold/esp/esp-idf/components/bootloader_support/include -I/home/cold/esp/esp-idf/components/bootloader_support/bootloader_flash/include -I/home/cold/esp/esp-idf/components/esp_partition/include -I/home/cold/esp/esp-idf/components/app_update/include -I/home/cold/esp/esp-idf/components/spi_flash/include -I/home/cold/esp/esp-idf/components/pthread/include -I/home/cold/esp/esp-idf/components/esp_timer/include -I/home/cold/esp/esp-idf/components/app_trace/include -I/home/cold/esp/esp-idf/components/esp_event/include -I/home/cold/esp/esp-idf/components/nvs_flash/include -I/home/cold/esp/esp-idf/components/esp_phy/include -I/home/cold/esp/esp-idf/components/esp_phy/esp32/include -I/home/cold/esp/esp-idf/components/vfs/include -I/home/cold/esp/esp-idf/components/esp_netif/include -I/home/cold/esp/esp-idf/components/wpa_supplicant/include -I/home/cold/esp/esp-idf/components/wpa_supplicant/port/include -I/home/cold/esp/esp-idf/components/wpa_supplicant/esp_supplicant/include -I/home/cold/esp/esp-idf/components/esp_wifi/include -I/home/cold/esp/esp-idf/components/unity/include -I/home/cold/esp/esp-idf/components/unity/unity/src -I/home/cold/esp/esp-idf/components/cmock/CMock/src -I/home/cold/esp/esp-idf/components/console -I/home/cold/esp/esp-idf/components/http_parser -I/home/cold/esp/esp-idf/components/esp-tls -I/home/cold/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/cold/esp/esp-idf/components/esp_adc/include -I/home/cold/esp/esp-idf/components/esp_adc/interface -I/home/cold/esp/esp-idf/components/esp_adc/esp32/include -I/home/cold/esp/esp-idf/components/esp_adc/deprecated/include -I/home/cold/esp/esp-idf/components/esp_eth/include -I/home/cold/esp/esp-idf/components/esp_gdbstub/include -I/home/cold/esp/esp-idf/components/esp_gdbstub/xtensa -I/home/cold/esp/esp-idf/components/esp_gdbstub/esp32 -I/home/cold/esp/esp-idf/components/esp_hid/include -I/home/cold/esp/esp-idf/components/tcp_transport/include -I/home/cold/esp/esp-idf/components/esp_http_client/include -I/home/cold/esp/esp-idf/components/esp_http_server/include -I/home/cold/esp/esp-idf/components/esp_https_ota/include -I/home/cold/esp/esp-idf/components/esp_lcd/include -I/home/cold/esp/esp-idf/components/esp_lcd/interface -I/home/cold/esp/esp-idf/components/protobuf-c/protobuf-c -I/home/cold/esp/esp-idf/components/protocomm/include/common -I/home/cold/esp/esp-idf/components/protocomm/include/security -I/home/cold/esp/esp-idf/components/protocomm/include/transports -I/home/cold/esp/esp-idf/components/esp_local_ctrl/include -I/home/cold/esp/esp-idf/components/esp_psram/include -I/home/cold/esp/esp-idf/components/espcoredump/include -I/home/cold/esp/esp-idf/components/espcoredump/include/port/xtensa -I/home/cold/esp/esp-idf/components/wear_levelling/include -I/home/cold/esp/esp-idf/components/sdmmc/include -I/home/cold/esp/esp-idf/components/fatfs/diskio -I/home/cold/esp/esp-idf/components/fatfs/vfs -I/home/cold/esp/esp-idf/components/fatfs/src -I/home/cold/esp/esp-idf/components/idf_test/include -I/home/cold/esp/esp-idf/components/idf_test/include/esp32 -I/home/cold/esp/esp-idf/components/ieee802154/include -I/home/cold/esp/esp-idf/components/json/cJSON -I/home/cold/esp/esp-idf/components/mqtt/esp-mqtt/include -I/home/cold/esp/esp-idf/components/perfmon/include -I/home/cold/esp/esp-idf/components/spiffs/include -I/home/cold/esp/esp-idf/components/ulp/ulp_common/include -I/home/cold/esp/esp-idf/components/ulp/ulp_common/include/esp32 -I/home/cold/esp/esp-idf/components/wifi_provisioning/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/cold/esp/learning_components=. -fmacro-prefix-map=/home/cold/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.1\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/learning_components.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/learning_components.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/learning_components.c.obj -c /home/cold/esp/learning_components/main/learning_components.c
In file included from /home/cold/esp/learning_components/main/learning_components.c:2:
/home/cold/esp/learning_components/main/learning_components.c: In function 'blink':
/home/cold/esp/esp-idf/components/log/include/esp_log.h:431:54: error: expected ',' or ';' before 'do'
  431 | #define ESP_LOG_LEVEL_LOCAL(level, tag, format, ...) do {               \
      |                                                      ^~
/home/cold/esp/esp-idf/components/log/include/esp_log.h:342:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  342 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/cold/esp/learning_components/main/learning_components.c:28:9: note: in expansion of macro 'ESP_LOGI'
   28 |         ESP_LOGI(TAG, "Blink Started:\n    Pin %d\n    Core: %d", pin, xPortGetCoreID());
      |         ^~~~~~~~
/home/cold/esp/learning_components/main/learning_components.c: In function 'app_main':
/home/cold/esp/learning_components/main/learning_components.c:50:20: warning: unused variable 'led_e_config' [-Wunused-variable]
   50 |     blink_config_t led_e_config = {
      |                    ^~~~~~~~~~~~
ninja: build stopped: subcommand failed.
